--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <nav class="navbar">
             <div class="nav-left">
                 <a href="#home" class="logo">AMARA</a>
+                
+            </div>
+            <div>
                 <ul class="nav-links">
                     <li><a href="#shop">Shop</a></li>
                     <li><a href="#about">About</a></li>
@@ -50,7 +53,7 @@
                     <img src="assets/flower-image.svg" alt="" class="product-flower">
                     <div class="arch-outer">
                         <div class="arch-inner">
-                            <img src="assets/star.svg" alt="" class="decorative-star">
+                            <img src="assets/star-image.svg" alt="" class="decorative-star">
                             <img src="assets/product.svg" alt="PureCare Product" class="product-image">
                         </div>
                     </div>
@@ -58,6 +61,156 @@
                 </div>
             </div>
         </section>
+
+        <section class="our-product">
+            <h2>Our Product</h2>
+            <div class="product-showcase">
+                <div class="product-description">
+                    <h3>Describe feature one</h3>
+                    <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
+                    <a href="#learn-more" class="learn-more">Learn More about me→</a>
+                </div>
+                <div class="product-images">
+                    <img src="assets/product-1.png" alt="Esay Share Product" class="product-img-main">
+                </div>
+            </div>
+        </section>
+
+        <section class="features">
+            <h2>Medium length section<br>heading goes here</h2>
+            <p class="subtitle">At Amara, we care deeply about your comfort, health, and the planet. That's why we create organic sanitary pads that are soft, safe, and sustainable.</p>
+            
+            <div class="features-grid">
+                <div class="feature-left">
+                    <div class="feature-item">
+                        <img src="assets/leaf-icon.svg" alt="" class="feature-icon">
+                        <h4>100% Organic</h4>
+                        <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="assets/eco-icon.svg" alt="" class="feature-icon">
+                        <h4>Eco-Friendly</h4>
+                        <p>We believe that period care should never come at the cost of your well-being or the environment.</p>
+                    </div>
+                </div>
+
+                <div class="feature-image">
+                    <img src="assets/pad-image.png" alt="Product Feature" class="center-image">
+                </div>
+
+                <div class="feature-right">
+                    <div class="feature-item">
+                        <img src="assets/drop-icon.svg" alt="" class="feature-icon">
+                        <h4>Freshness and Safety</h4>
+                        <p>From the way we source our materials to the way we package our products, every part of the Amara journey is designed with sustainability in mind.</p>
+                    </div>
+                    <div class="feature-item">
+                        <img src="assets/drop-dark-icon.svg" alt="" class="feature-icon">
+                        <h4>Heavy Flow</h4>
+                        <p>Our pads are made with 100% organic cotton, which means they are free from harmful chemicals, synthetic materials, and artificial fragrances.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="testimonials">
+            <h2>Our Happy Clients</h2>
+            <div class="testimonials-grid">
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        <h4>Sarah Johnson</h4>
+                        <p>The product quality is amazing! I've been using it for months and can see the difference. Highly recommended!</p>
+                    </div>
+                    <div class="rating">★★★★★</div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        <h4>Jessica Williams</h4>
+                        <p>Best natural skincare product I've ever used. The results are visible from day one.</p>
+                    </div>
+                    <div class="rating">★★★★★</div>
+                </div>
+                <div class="testimonial-card">
+                    <div class="testimonial-content">
+                        <h4>Priya Sharma</h4>
+                        <p>Love how gentle it is on my sensitive skin. Will definitely purchase again!</p>
+                    </div>
+                    <div class="rating">★★★★★</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="newsletter-section">
+            <section class="newsletter">
+                <div class="newsletter-container">
+                    <div class="newsletter-text">
+                        <h2>Subscribe to my Blog</h2>
+                        <p>I post fresh content every week.</p>
+                    </div>
+                    <form class="subscribe-form">
+                        <input type="email" placeholder="Enter Your Email">
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </section>
+        </section>
+
+        <section class="certification">
+            <h2>Certification</h2>
+            <div class="certification-container">
+                <div class="certification-image">
+                    <img src="assets/certificate.png" alt="Certification Process">
+                </div>
+                <div class="certification-badges">
+                    <div class="badge">
+                        <img src="assets/leaf-icon.svg" alt="" class="badge-icon">
+                        <h4>100% Organic</h4>
+                        <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
+                    </div>
+                    <div class="badge">
+                        <img src="assets/leaf-icon.svg" alt="" class="badge-icon">
+                        <h4>100% Organic</h4>
+                        <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
+                    </div>
+                    <div class="badge">
+                        <img src="assets/leaf-icon.svg" alt="" class="badge-icon">
+                        <h4>100% Organic</h4>
+                        <p>Made with certified organic cotton, free from harmful chemicals, synthetics, and dyes.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer-background">AMARA</div>
+        <div class="footer-content">
+            <div class="footer-left">
+                <a href="#" class="footer-logo">AMARA</a>
+                <nav class="footer-nav">
+                    <a href="#home">Home</a>
+                    <a href="#shop">Shop</a>
+                    <a href="#about">About</a>
+                    <a href="#blog">Blog</a>
+                    <a href="#contact">Contact</a>
+                </nav>
+            </div>
+            <div class="footer-subscribe">
+                <form class="footer-form">
+                    <input type="email" placeholder="Enter your email">
+                    <button type="submit">Subscribe</button>
+                </form>
+                <p>By subscribing you agree to with our <a href="#privacy">Privacy Policy</a></p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="footer-copyright">©2024 Aamara All rights reserved</div>
+            <div class="footer-social">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html> 
