--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMARA - Pure Organic Care</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="auth.css">
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     <!-- Italiana Font -->
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
     <!-- TT Commons Pro is a premium font, using a similar alternative for demo -->
@@ -29,8 +34,8 @@
             </div>
             <div class="nav-right">
                 <div class="auth-buttons">
-                    <a href="#login" class="login-btn">Login</a>
-                    <a href="#signup" class="signup-btn">Sign up</a>
+                    <a href="login.html" class="login-btn">Login</a>
+                    <a href="register.html" class="signup-btn">Sign up</a>
                 </div>
             </div>
         </nav>
@@ -212,5 +217,6 @@
             </div>
         </div>
     </footer>
+    <script src="auth.js"></script>
 </body>
 </html> 
