--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMARA - Pure Organic Care</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="auth.css">
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -26,10 +27,11 @@
             </div>
             <div>
                 <ul class="nav-links">
-                    <li><a href="#shop">Shop</a></li>
+                    <li><a href="index.html"  class="active">Home</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -217,6 +219,7 @@
             </div>
         </div>
     </footer>
+    <script src="firebase-config.js"></script>
     <script src="auth.js"></script>
 </body>
 </html> 
