--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             </div>
             <div class="nav-right">
                 <div class="auth-buttons">
-                    <a href="login.html" class="login-btn">Login</a>
+                    <a href="login.html" class="login-btn active">Login</a>
                     <a href="register.html" class="signup-btn">Sign up</a>
                 </div>
             </div>
