Adds terms and condition

--- a/about.html
+++ b/about.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Amara</title>
+    <link rel="stylesheet" href="auth.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="about.css">
     <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <!-- Firebase SDK -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
 </head>
 <body>
     <header>
@@ -112,7 +117,7 @@
                     <input type="email" placeholder="Enter your email">
                     <button type="submit">Subscribe</button>
                 </form>
-                <p>By subscribing you agree to with our <a href="#privacy">Privacy Policy</a></p>
+                <p>By subscribing you agree to with our <a href="terms.html">Privacy Policy</a></p>
             </div>
         </div>
         <div class="footer-bottom">
@@ -124,5 +129,10 @@
             </div>
         </div>
     </footer>
+    <!-- Loader -->
+    <div class="loader-container">
+        <div class="loader"></div>
+    </div>
+    <script src="auth-state.js"></script>
 </body>
 </html> 
