--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Story Behind AMARA</title>
+    <link rel="stylesheet" href="auth.css">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="blog.css">
@@ -100,7 +101,7 @@
                     <input type="email" placeholder="Enter your email">
                     <button type="submit">Subscribe</button>
                 </form>
-                <p>By subscribing you agree to with our <a href="#privacy">Privacy Policy</a></p>
+                <p>By subscribing you agree to with our <a href="terms.html">Privacy Policy</a></p>
             </div>
         </div>
         <div class="footer-bottom">
@@ -112,6 +113,11 @@
             </div>
         </div>
     </footer>
+
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+    <script src="auth-state.js"></script>
 </body>
 
 </html>
