--- a/login.html
+++ b/login.html
@@ -77,7 +77,7 @@
                     <input type="email" placeholder="Enter your email">
                     <button type="submit">Subscribe</button>
                 </form>
-                <p>By subscribing you agree to with our <a href="#privacy">Privacy Policy</a></p>
+                <p>By subscribing you agree to with our <a href="terms.html">Privacy Policy</a></p>
             </div>
         </div>
         <div class="footer-bottom">
