--- a/terms.html
+++ b/terms.html
@@ -15,7 +15,9 @@
     <header>
         <nav class="navbar">
             <div class="nav-left">
-                <a href="index.html" class="logo">AMARA</a>
+                <a href="index.html" class="logo">
+                    <img src="assets/logo-dark.png" alt="AMARA">
+                </a>
             </div>
             <div>
                 <ul class="nav-links">
@@ -66,7 +68,9 @@
     </main>
 
     <footer class="footer">
-        <div class="footer-background">AMARA</div>
+        <div class="footer-background">
+            <img src="assets/logo-light.png" alt="AMARA">
+        </div>
         <div class="footer-content">
             <div class="footer-left">
                 <a href="#" class="footer-logo">AMARA</a>
