--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
     <header>
         <nav class="navbar">
             <div class="nav-left">
-                <a href="index.html" class="logo">AMARA</a>
+                <a href="index.html" class="logo">
+                    <img src="assets/logo-dark.png" alt="AMARA">
+                </a>
             </div>
             <div>
                 <ul class="nav-links">
@@ -23,7 +25,9 @@
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html" class="active">Contact</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="policy.html">Policy</a></li>
+                    <li><a href="#pricing">Review</a></li>
+                    <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -115,7 +119,9 @@
     </div>
 
     <footer class="footer">
-        <div class="footer-background">AMARA</div>
+        <div class="footer-background">
+            <img src="assets/logo-light.png" alt="AMARA">
+        </div>
         <div class="footer-content">
             <div class="footer-left">
                 <a href="#" class="footer-logo">AMARA</a>
@@ -125,6 +131,8 @@
                     <a href="#about">About</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact">Contact</a>
+                    <a href="policy.html">Policy</a>
+                    <a href="terms.html">Condition</a>
                 </nav>
             </div>
             <div class="footer-subscribe">
