--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
     <header>
         <nav class="navbar">
             <div class="nav-left">
-                <a href="#home" class="logo">AMARA</a>
-                
+                <a href="index.html" class="logo">
+                    <img src="assets/logo-dark.png" alt="AMARA">
+                </a>
             </div>
             <div>
                 <ul class="nav-links">
-                    <li><a href="index.html"  class="active">Home</a></li>
+                    <li><a href="index.html" class="active">Home</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
-                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="policy.html">Policy</a></li>
+                    <li><a href="#pricing">Review</a></li>
+                    <li><a href="organic.html">Why Organic</a></li>
                 </ul>
             </div>
             <div class="nav-right">
@@ -190,7 +193,9 @@
     </main>
 
     <footer class="footer">
-        <div class="footer-background">AMARA</div>
+        <div class="footer-background">
+            <img src="assets/logo-light.png" alt="AMARA">
+        </div>
         <div class="footer-content">
             <div class="footer-left">
                 <a href="#" class="footer-logo">AMARA</a>
@@ -200,6 +205,8 @@
                     <a href="#about">About</a>
                     <a href="#blog">Blog</a>
                     <a href="#contact">Contact</a>
+                    <a href="#contact">Policy</a>
+                    <a href="#contact">Condition</a>
                 </nav>
             </div>
             <div class="footer-subscribe">
